--- a/quiz-app/package.json
+++ b/quiz-app/package.json
@@ -16,6 +16,7 @@
     "@types/react-dom": "^18.3.1",
     "@types/react-router-dom": "^5.3.3",
     "axios": "^1.7.8",
+    "quiz-app": "file:",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^7.0.1",
